Change InfoBox (trying to fix random wrong size) Finish adding FusionCharts support Update Logs from Rosbel

--- a/css/custom.css
+++ b/css/custom.css
@@ -97,3 +97,11 @@ body {
     color: #ffffff;
     padding: 10px 10px 10px 10px;
 }
+
+.infobox {
+    display:inline-block;
+}
+
+.infotable {
+    display:inline-block;
+}
